--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,87 @@ h1, h2, h3, h4, h5, h6 {
         transition-delay: 0 !important;
     }
 }
+/*--------------------------------------------------------------
+# overlay
+--------------------------------------------------------------*/
 
+.custom_overlay_wrapper {
+    position: relative;
+}
+
+.custom_overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
+    text-align: center;
+    background-color: rgba(255, 255, 255, .8);
+    opacity: 0;
+    -webkit-transition: all 150ms ease-in-out;
+    -moz-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+}
+
+    .custom_overlay:hover {
+        opacity: 1;
+    }
+
+.custom_overlay_inner {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+.custom_overlay h4 {
+    position: relative;
+    
+}
+
+.custom_overlay p {
+    color: #000;
+    line-height: 1.4em;
+}
+
+.custom_overlay h4:after {
+    background-color: #cf751b;
+    content: "";
+    position: absolute;
+    left: 35%;
+    right: 35%;
+    bottom: 0;
+    height: 2px;
+  
+}
+/*------------------- TABLET ------------------*/
+@media only screen and ( min-width: 600px ) and ( max-width: 999px ) {
+    .custom_overlay h4
+
+{
+    font-size: 80%;
+}
+
+.custom_overlay p {
+    font-size: 85%;
+    line-height: 1.2em;
+}
+
+}
+
+/*------------------- MOBILE ------------------*/
+@media only screen and ( max-width: 599px ) {
+    .custom_overlay h4 {
+        font-size: 100%;
+    }
+
+    .custom_overlay p {
+        font-size: 100%;
+    }
+}
 /*--------------------------------------------------------------
 # Top Bar
 --------------------------------------------------------------*/
@@ -1284,21 +1364,23 @@ section {
 # Portfolio Details
 --------------------------------------------------------------*/
 .portfolio-details {
-    padding-top: 10px;
+    padding-top: 0px;
 }
 
     .portfolio-details .portfolio-details-container {
-        position: relative;
+        position: relative ;
+        
     }
 
     .portfolio-details .portfolio-details-carousel {
         position: relative;
         z-index: 1;
+        
     }
 
         .portfolio-details .portfolio-details-carousel .owl-nav, .portfolio-details .portfolio-details-carousel .owl-dots {
             margin-top: 5px;
-            text-align: left;
+            text-align: right;
         }
 
         .portfolio-details .portfolio-details-carousel .owl-dot {
