--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     left: 35%;
     right: 35%;
-    bottom: 0;
+    bottom: -5px;
     height: 2px;
   
 }
